[package]
name = "pack"
version = "0.4.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2.14"
blake3 = "1.3.3"
bumpalo = "3.12.0"
clap = { version = "4.1.1", features = ["derive"] }
either = "1.8.0"
globwalk = "0.8.1"
hashbrown = { version = "0.13.2", features = ["serde"] }
indexmap = { version = "1.9.2", features = ["serde"] }
os_str_bytes = "6.4.1"
owo-colors = "3.5.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
sha1_smol = "1.0.0"
thiserror = "1.0.38"
unicase = "2.6.0"
